style.css
html {
    /* background-color: darkgreen; */
    background-image: url("background.jpg");
    background-attachment: fixed;
    background-repeat: no-repeat;
    background-size: cover;
    color: blue;
}

h1 {
    text-align: center;
    margin-bottom: 0px;
    font-size: 24pt;
}

h2 {
    font-size: 20pt;
}

p {
    font-size: 16pt;
}

#gameBoard {
    display: flex;
}

.playerBoard {
    width: 50%;
    text-align: center;
}

.buttons {
    display: block;
}

button {
    background-color: lightblue;
    border: 1px solid black;
    border-radius: 8px;
    font-size: 16pt;
    padding: 5px;
    margin: 5px;
}
button:hover {
    background-color: lightgreen;
}

.pic1, .pic2 {
    display: block;
    margin: auto;
    max-width: 250px;
    max-height: 250px;
}

#gameOver {
    top: 100px;
    left: 50%;
    position: absolute;
    transform: translate(-50%, -50%);
    text-align: center;
    font-size: 20pt;
    width: 200px;
    border: 1px solid black;
    border-radius: 8px;
    color: red;
    background-color: gray;
    padding: 5px;
    visibility: hidden;
}

/* Style for the log area */
#gameLog {
    width: 80%; /* Adjust width as needed */
    margin: 20px auto; /* Center horizontally */
    padding: 10px;
    border: 2px solid black;
    background-color: #f9f9f9;
    height: 150px; /* Adjust height as needed */
    overflow-y: auto; /* Enable scrolling if content overflows */
    text-align: left;
    font-family: Arial, sans-serif;
    font-size: 14px;
}

